# langgraph-deepsearch-mcp

./: .env.example  .gitignore  LICENSE  README.md  gemini_server.py  pyproject.toml  setup_local.py
src/deep_search_mcp/: __init__.py  graph.py  mcp_server.py
